# claw-relay

./: .dockerignore  .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  REVIEW.md  SECURITY.md  SKILL.md  background.js  content.js  docker-entrypoint.sh  manifest.json  package-lock.json  package.json  plugin.json  railway.env.example  railway.json  start-local.sh  start.sh  stop.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  proof-agent.yml  publish.yml
docs/: dashboard.md  mcp.md  protocol.md  responsible-use.md  setup.md  troubleshooting.md  tunnels.md
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
mcp/: claw-relay-mcp.js  package-lock.json  package.json
panel/: devtools.js  panel.css  panel.html  panel.js
popup/: popup.css  popup.html  popup.js
relay/: protocol.js  server.js
relay-core/: Cargo.toml  README.md
relay-core/src/: audit.rs  auth.rs  blocklist.rs  config.rs  dashboard.rs  main.rs  permissions.rs  relay.rs  state.rs
relay-server/: .gitignore  .npmignore  config.example.yaml  package-lock.json  package.json  test.ts  tsconfig.json  tsup.config.ts
relay-server/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
relay-server/src/: allowlist.ts  audit-logger.ts  auth.ts  cli.ts  dashboard.ts  engine.ts  index.ts  permissions.ts  protocol.ts  (+2 more)
utils/: audit.js  permissions.js  snapshot.js
(+13 files in other folders)
